--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 MONGODB_URL = "mongodb://localhost:27017"
 DB_NAME = "mental-health-db"
+
+SECRET_KEY=supersecretkeychangeit
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
