--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ DB_NAME = "mental-health-db"
 SECRET_KEY=supersecretkeychangeit
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
+GEMINI_API_KEY=your_gemini_api_key_here
+
