--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,5 @@ DB_NAME=mental_health_db
 SECRET_KEY=your_secret_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
+GEMINI_API_KEY=your_gemini_api_key_here
+
