--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "face-api.js": "^0.22.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
