--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ DB_NAME = "mental-health-db"
 SECRET_KEY=supersecretkeychangeit
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
-GEMINI_API_KEY=AIzaSyCHcvviOdBF4V152BWVYn7GHPvj29DlurM
+GEMINI_API_KEY= #AIzaSyD8SXJX0-tbhyO2UmCwFBiJkXjfMH15-JQ
 
